<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_header_style">
        <SwitchPreference
            android:defaultValue="true"
            android:key="bold_switch"
            android:title="@string/pref_title_bold" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="italic_switch"
            android:title="@string/pref_title_italic" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="underline_switch"
            android:title="@string/pref_title_underline" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="strikethrough_switch"
            android:title="@string/pref_title_strikethrough" />
        <!--<SwitchPreference
            android:defaultValue="true"
            android:key="bullet_switch"
            android:title="@string/pref_title_bulletlist" />
         <SwitchPreference
            android:key="quote_switch"
            android:title="@string/pref_title_quote" />-->
        <SwitchPreference
            android:defaultValue="true"
            android:key="clear_switch"
            android:title="@string/pref_title_clear" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_backup">
        <Preference
            android:key="@string/pref_key_export"
            android:summary="@string/pref_description_backup"
            android:title="@string/pref_title_backup"/>

        <Preference
            android:key="@string/pref_key_import"
            android:summary="@string/pref_description_import"
            android:title="@string/pref_title_import"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_about_app">
        <Preference
            android:key="version"
            android:summary="@string/pref_description_version"
            android:title="@string/pref_title_version"/>
        <Preference
            android:key="url_dev"
            android:title="@string/pref_title_dev"
            android:summary="@string/pref_description_dev">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/pref_url_site" />
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>